# fooksman-gpt-web

./: app.py  optimized_params.npy  pyproject.toml  requirements.txt  word_vectors.pkl
templates/: index.html
