[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.9"
numpy = "^1.23.0"  # バージョンは必要に応じて調整してください
tokenizers = "^0.13.0"  # バージョンは必要に応じて調整してください

[tool.poetry.dev-dependencies]
