[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.9"
transformers = "4.9.1"
tokenizers = "0.10.3"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
